Java 21 deprecation warnings fixes